# aegis_dataops_pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_spark.py
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml
aegis/: pipeline.py
aegis_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
conf/: config.yaml
scripts/: generate_data.py
tests/: test_pipeline.py
